--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         }
 
         .mdl-layout__header {
-            background-color: rgb(255 255 255);
-            color: #5d5d5d;
+            background-color: rgb(252, 155, 3);
+            color: #FFFFFF;
             font-weight: 100;
         }
 
@@ -105,18 +105,18 @@
             color: #777777;
             font-weight: 300;
 
-            border: solid #4285f4 1px;
+            border: solid #fc9b03 1px;
             border-radius: 5px;
             margin: 5px;
         }
 
         .feature-tabs > div:hover {
-            background-color: #4285f41a;
+            background-color: #fc9b031a;
         }
 
 
         .feature-tabs > .selected {
-            border-bottom: 2px solid #4285F4;
+            border-bottom: 2px solid #fc9b03;
         }
 
         .feature-tabs > .disabled {
@@ -190,7 +190,9 @@
         <p>This app <b><u>doesn't</u></b> send or store any of your video or annotation data. It just visualises
             local data files.</p>-->
         <p>하이버프 영상 분석 시스템입니다.</br>아래 영상과 json파일을 업로드하세요.</p>
-        <p>이 웹은 시연용 웹사이트입니다.</br>영상과 JSON파일을 저장하지 않습니다.</p>
+        <p>영상과 JSON파일의 싱크를 맞춰 결과값을 보여주는 시연용 웹 사이트입니다.</p>
+        <p>이 웹사이트는 영상과 JSON파일을 저장하지 않습니다.</p>
+
         <div class="upload-area" ondrop="drop_video(event)" ondragover="drag_enter(event)">
             <p>샘플 영상을 업로드 하세요.</p>
             <input id="video_input" type="file" accept="video/*"/>
