스타일 적용2

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </div>
 
     <div id="upload-data">
-        <h5>영상 분석을 시도하세요!</h5>
+        <h5>영상 분석을 시도하세요!😎</h5>
         <!--<p>You can analyse a video using the following script <a target="_blank"
                 href="https://github.com/ZackAkil/video-intelligence-api-visualiser/blob/main/run_video_intelligence.py">here</a>
             if you want to run all features at once.
