한국어로 변환

--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
     </div>
 
     <div v-if="data_misaligned" class="data-warning">
-        It looks like the json data dosn't align with the video file, are you sure you have all of the right files
-        uploaded?
+        json 데이터가 동영상 파일과 일치 하지 않는 것 같은데, 올바른 파일을 모두 업로드했나요? 🤔
     </div>
 
 
