--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             /* display: inline-block; */
             width: 200px;
             /* height: 62px; */
-            border: dashed #ededed 3px;
+            border: dashed #FC9B03 3px;
             border-radius: 5px;
             padding: 15px;
             margin: 15px;
