--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         }
 
         #video-conatiner {
-
             position: relative;
             width: 800px;
             height: 450px;
@@ -69,6 +68,7 @@
 
         video {
             width: 100%;
+            height: 100%;
             margin: auto;
             display: block;
             object-fit: cover;
