타임라인 클릭 시 영상 일시정지

--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
     function jump_video_to_time(time) {
         const video = document.querySelector('video')
         video.currentTime = time
-        video.play()
+        video.pause();
+        // video.
     }
 
 
