--- a/index.html
+++ b/index.html
@@ -520,15 +520,21 @@
     });
 
 
+    const GCP_SERVER_IP = '34.64.43.132'; // GCP 서버의 외부 IP 주소
+    const GCP_SERVER_PORT = 5580; // GCP 서버의 포트 번호
+    
+    const WINDOW_LOCATION_HOST_NAME = window.location.hostname
+    const LOCAL_HOST_PORT = 8080;
+
 
     const mediaSource = new MediaSource();
     pipVideo.src = URL.createObjectURL(mediaSource);
 
     let wsUrl;
     if (window.location.protocol === 'https:') {
-        wsUrl = `wss://${window.location.hostname}:5580`;
+        wsUrl = `wss://${GCP_SERVER_IP}:${GCP_SERVER_PORT}`;
     } else {
-        wsUrl = `ws://${window.location.hostname}:5580`;
+        wsUrl = `ws://${GCP_SERVER_IP}:${GCP_SERVER_PORT}`;
     }
 
     const player = new JSMpeg.Player(wsUrl, {
