--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
+    <script src="config.js"></script>
 
     <!--
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-N80GH8KX9W"></script>
@@ -520,11 +521,11 @@
     });
 
 
-    const GCP_SERVER_IP = '34.64.43.132'; // GCP 서버의 외부 IP 주소
-    const GCP_SERVER_PORT = 5580; // GCP 서버의 포트 번호
+    const GCP_SERVER_IP = CONFIG.GCP_SERVER_IP; // GCP 서버의 외부 IP 주소
+    const GCP_SERVER_PORT = CONFIG.GCP_SERVER_PORT; // GCP 서버의 포트 번호
     
     const WINDOW_LOCATION_HOST_NAME = window.location.hostname
-    const LOCAL_HOST_PORT = 8080;
+    const LOCAL_HOST_PORT = CONFIG.LOCAL_HOST_PORT;
 
 
     const mediaSource = new MediaSource();
