--- a/index.html
+++ b/index.html
@@ -533,9 +533,11 @@
 
     let wsUrl;
     if (window.location.protocol === 'https:') {
-        wsUrl = `wss://${GCP_SERVER_IP}:443`;
+        wsUrl = `wss://${window.location.hostname}:8080`;
+        // wsUrl = `wss://${GCP_SERVER_IP}:${GCP_SERVER_PORT}`;
     } else {
-        wsUrl = `ws://${GCP_SERVER_IP}:443`;
+        wsUrl = `ws://${window.location.hostname}:8080`;
+        // wsUrl = `ws://${GCP_SERVER_IP}:${GCP_SERVER_PORT}`;
     }
 
     const player = new JSMpeg.Player(wsUrl, {
